--- a/src/components/ClientReviews/ClientReviews.css
+++ b/src/components/ClientReviews/ClientReviews.css
@@ -1,6 +1,7 @@
 .client-reviews {
   width: 100%;
-  height: 100%;
+  height: 110%;
+  /* background: #000; */
   display: flex;
   justify-content: center;
 }
@@ -10,7 +11,8 @@
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+ 
 }
 
 .client-reviews .client-reviews-wrapper {
@@ -69,13 +71,14 @@
   bottom: 8rem;
   left: 50%;
   width: 100%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   height: 4rem;
   border-radius: 0.5rem;
   display: flex;
   align-items: center;
   gap: 0.25rem;
   padding: 0.5rem;
+
 }
 
 .client-reviews .client-item {
